<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/nav_ic_home"
            android:title="@string/nav_news" />


        <item
            android:id="@+id/nav_find_my_office"
            android:icon="@mipmap/nav_ic_map"
            android:title="@string/nav_map" />

        <item
            android:id="@+id/nav_about_me"
            android:icon="@mipmap/nav_ic_about_me"
            android:title="@string/nav_about_me" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@mipmap/nav_ic_contact_us"
            android:title="@string/nav_contact_us" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/nav_ic_settings"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_terms"
                android:title="@string/nav_terms" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>